# content_ingestion_service

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  docker-compose.yml  local.docker-compose.yaml  local.docker-compose.yml
common/: Cargo.toml  README.md  build.rs
common/src/: lib.rs  telemetry.rs
common/src/constants/: mod.rs  routing_keys.rs
common/src/core/: mod.rs  rabbitmq_message_repository.rs
common/src/dtos/: extract_content_job.rs  extracted_content.rs  fulltext_search_request.rs  fulltext_search_response.rs  mod.rs
common/src/dtos/proto/: mod.rs
common/src/dtos/templates/: mod.rs  rpc_response.rs
common/tests/core/: helpers.rs  main.rs  rabbitmq_message_repository.rs
content_ingestion_service/: Cargo.toml  Dockerfile  sqlx-data.json
content_ingestion_service/configuration/: base.yaml  base.yml  develop.yaml  develop.yml  local.yaml  local.yml  production.yaml  production.yml
content_ingestion_service/src/: configuration.rs  lib.rs  main.rs  startup.rs
content_ingestion_service/src/adapters/: epub_source_buffer.rs  mod.rs
content_ingestion_service/src/domain/entities/: content_extract_job.rs  document.rs  epub_file.rs  extract_content_job.rs  mod.rs  source.rs  source_meta.rs
content_ingestion_service/src/domain/services/: extract_content.rs  extract_content_generator.rs  mod.rs  xml_extract_content.rs
content_ingestion_service/src/ports/: source_buffer_port.rs
content_ingestion_service/src/repositories/: message_rabbitmq_repository.rs  mod.rs  source_file_s3_repository.rs  source_meta_postgres_repository.rs
content_ingestion_service/src/routes/: add_source_files.rs  mod.rs
content_ingestion_service/src/tests/: simple_1.txt
content_ingestion_service/src/use_cases/: create_documents.rs  extract_epub_content_with_generator.rs  mod.rs
content_ingestion_service/tests/api/: add_source_files.rs  health_check.rs  helpers.rs  main.rs
content_ingestion_worker/: Cargo.toml  Dockerfile  README.md
content_ingestion_worker/configuration/: base.yaml  base.yml  develop.yml  local.yaml  local.yml  production.yaml  production.yml
content_ingestion_worker/src/: configuration.rs  helper.rs  lib.rs  main.rs  startup.rs
content_ingestion_worker/src/domain/: mod.rs
content_ingestion_worker/src/domain/entities/: epub_reader.rs  epub_source_reader.rs  extract_content_job.rs  extracted_content.rs  meta_read.rs  mod.rs  pdf_reader.rs  simple_metadata_reader.rs  xml_reader.rs
content_ingestion_worker/src/domain/extractors/: extract_content_generator.rs  mod.rs
content_ingestion_worker/src/domain/readers/: epub_reader.rs  mod.rs  pdf_reader.rs  simple_metadata_reader.rs  xml_reader.rs
content_ingestion_worker/src/domain/services/: extract_content_from_xml.rs  extract_content_generator.rs  mod.rs  (+1 more)
content_ingestion_worker/src/handlers/: example.rs  handler_extract_content_job.rs  mod.rs  parallel_delegates_handler_extract_content_job.rs  parallel_handlers_extract_content_job.rs
content_ingestion_worker/src/repositories/: extracted_content_meilisearch_repository.rs  message_rabbitmq_repository.rs  mod.rs  source_file_s3_repository.rs
content_ingestion_worker/tests/content_readers/: epub_xml_readers.rs  helpers.rs  main.rs
content_ingestion_worker/tests/message_handlers/: handler_extract_content_job.rs  helpers.rs  main.rs
content_ingestion_worker/tests/queue_handlers/: handler_extract_content_job.rs  helpers.rs
content_ingestion_worker/tests/resources/: sample_3_chapters.epub  simple_2_with_result.txt
content_ingestion_worker/tests/worker/: example.rs  helpers.rs  main.rs
embedding_worker/: Cargo.toml  README.md
embedding_worker/configuration/: base.yml  develop.yml  local.yml  production.yml
embedding_worker/examples/: async_embeddings.rs  search_embeddings.rs
embedding_worker/src/: configuration.rs  main.rs  main_async_embeddings_ex.rs  main_example.rs  saved_main.rs  startup.rs
embedding_worker/src/handlers/: handler_content_extracted.rs
embedding_worker/src/repositories/: content_point_qdrant_repository.rs  message_rabbitmq_repository.rs  mod.rs
embedding_worker/tests/message_handlers/: handler_content_extracted.rs  helpers.rs  main.rs
fulltext_search_service/: Cargo.toml  Dockerfile
fulltext_search_service/configuration/: base.yml  develop.yml  local.yml  production.yml
fulltext_search_service/src/: configuration.rs  lib.rs  main.rs  startup.rs
fulltext_search_service/src/handlers/: handler_content_extracted.rs  handler_extract_content_job.rs  handler_search_fulltext.rs  mod.rs
fulltext_search_service/src/repositories/: meilisearch_content_repository.rs
fulltext_search_service/tests/message_handlers/: handler_content_extracted.rs  handler_search_fulltext.rs  helpers.rs  main.rs
rest_gateway/: Cargo.toml  Dockerfile  README.md  sqlx-data.json
rest_gateway/configuration/: base.yml  local.yml
rest_gateway/src/: configuration.rs  lib.rs  main.rs  startup.rs
rest_gateway/src/controllers/: add_source_files.rs  create_account.rs  health_check.rs  log_in_account.rs  mod.rs  search_content.rs
rest_gateway/src/repositories/: authentication_jwt_repository.rs  jwt_authentication_repository.rs  message_rabbitmq_repository.rs  mod.rs  source_file_s3_repository.rs  source_meta_postgres_repository.rs  user_postgres_repository.rs
rest_gateway/src/routes/: add_source_files.rs  search_content.rs
rest_gateway/tests/api/: add_source_files.rs  create_account.rs  health_check.rs  helpers.rs  log_in_account.rs  main.rs  search_content.rs
template_service_kafka_grpc/: .env  Cargo.toml
template_service_kafka_grpc/configuration/: base.yml  develop.yml  local.yml  production.yml
template_service_kafka_grpc/src/: configuration.rs  lib.rs  main.rs  startup.rs
template_service_kafka_grpc/src/controllers/: handler_a_grpc_message.rs  handler_a_kafka_message.rs  mod.rs
template_service_kafka_grpc/src/ports/: content_repository.rs  mod.rs
template_service_kafka_grpc/src/repositories/: content_meilisearch_repository.rs  meilisearch_content_repository.rs  mod.rs  source_meta_postgres_repository.rs
(+53 files in other folders)
