[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
futures = "0.3.28"
tracing = { version = "0.1.37", features = ["log"] } 
thiserror = "1.0.40"
async-trait = "0.1.73"
lapin = "2.3.1"
serde_json = "1.0.97"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
