[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["macros"] }
chrono = "0.4.26"
futures = "0.3.28"
once_cell = "1.18.0"
tracing = { version = "0.1.37", features = ["log"] } 
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
thiserror = "1.0.40"
async-trait = "0.1.73"
lapin = "2.3.1"
serde_json = "1.0.97"
serde = { version = "1.0.163", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

[dev-dependencies]
tokio-executor-trait = "2.0.1"
tokio-reactor-trait = "1.1.0"
