[package]
name = "content_ingestion_service"
version = "0.1.0"
edition = "2021"

[dependencies]
demonstrate = "0.4.5"
epub = "2.0.0"
genawaiter = "0.99.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
quick-xml = "0.28.1"
macros = { path = "../macros" }
lazy_static = "1.4.0"

[dev-dependencies]
# TODO: to remove for demonstrate ?
speculate = "0.1"
serial_test = "*"
log = "0.4.17"
pretty_env_logger = "0.4.0"
memory_logger = { workspace = true }
