[package]
name = "content_ingestion_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
# To handle multipart/form-data request
actix-multipart = "0.6.0"
config = "0.13.3"
demonstrate = "0.4.5"
epub = "2.0.0"
genawaiter = "0.99.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
quick-xml = "0.28.1"
macros = { path = "../macros" }
lazy_static = "1.4.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] } 
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.3", features = ["v4"] }
once_cell = "1.18.0"
anyhow = "1.0.71"
thiserror = "1.0.40"


[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]

[dev-dependencies]
# TODO: to remove for demonstrate ?
speculate = "0.1"
serial_test = "*"
log = "0.4.17"
pretty_env_logger = "0.4.0"
memory_logger = { workspace = true }
reqwest = "0.11.18"
