[package]
name = "content_ingestion_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapin = "2.2.1"
tokio = { version = "1.28.2", features = ["macros"] }
tokio-executor-trait = "2.0.1"
tokio-reactor-trait = "1.1.0"
