[package]
name = "content_ingestion_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.2.1"
serde_json = "1.0.97"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros"] }
tokio-executor-trait = "2.0.1"
tokio-reactor-trait = "1.1.0"
tracing = { version = "0.1.37", features = ["log"] } 
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
thiserror = "1.0.40"
chrono = "0.4.26"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
once_cell = "1.18.0"
serde-aux = "4.2.0"
config = "0.13.3"
secrecy = { version = "0.8", features = ["serde"] }
rust-s3 = "0.33.0"
typed-builder = "0.14.0"
futures = "0.3.28"
reqwest = "0.11.18"
tokio-util = "0.7.8"
bytes = "1.4.0"
genawaiter = "0.99.1"
quick-xml = "0.29.0"
epub = "2.1.1"
fake = "2.6.1"
