[package]
name = "rest_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common"}
actix-web = "4.3.1"
# To handle multipart/form-data request
actix-multipart = "0.6.0"
config = "0.13.3"
epub = "2.0.0"
genawaiter = "0.99.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
quick-xml = "0.28.1"
lazy_static = "1.4.0"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] } 
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
uuid = { version = "1.3.3", features = ["v4", "serde"] }
once_cell = "1.18.0"
anyhow = "1.0.71"
thiserror = "1.0.40"
rust-s3 = "0.33.0"
chrono = "0.4.26"
typed-builder = "0.14.0"
tokio-stream = "0.1.14"
regex = "1.8.4"
lapin = "2.2.1"
tokio-executor-trait = "2.0.1"
tokio-reactor-trait = "1.1.0"
serde_json = "1.0.97"
async-once-cell = "0.5.2"
futures = "0.3.28"
argon2 = "0.5.1"
jsonwebtoken = "8.3.0"
rand = { version = "0.8", features=["std_rng"] }
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]

[dev-dependencies]
claims = "0.7.1"
serial_test = "*"
log = "0.4.17"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.18", features = ["multipart"] }
fake = "2.6.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
