[package]
name = "template_service_kafka_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
config = "0.13.3"
rdkafka = { version = "0.34", features = ["cmake-build","ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.2.0"
ctrlc = "3.1.8"
clap = "4.4.6"
log = "0.4.8"
env_logger = "0.10.0"
futures = "0.3.0"
chrono = "0.4.0"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.3.5"
rand = "0.8.5"
secrecy = { version = "0.8", features = ["serde"] }
tracing = { version = "0.1.37", features = ["log"] } 
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
meilisearch-sdk = "0.24.1"
async-trait = "0.1.74"
shaku = "0.6.1"
typed-builder = "0.18.0"

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
]
